# folders-api-homework

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  test_main.http
