[tool.poetry]
name = "folder-api"
version = "0.1.0"
description = ""
authors = ["amit rahav <amit.r.89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette-exporter = "^0.10.0"
uvicorn = "^0.13.4"
fastapi = "0.71.0"
fastapi-crudrouter = "0.8.4"
mysqlclient ="^1.3"
sqlalchemy = "1.4.29"

[tool.poetry.extras]
mysql = ["mysqlclient"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

